correct the numbers

--- a/index.html
+++ b/index.html
@@ -18,9 +18,19 @@
           <div class="even-number"></div>
           <div class="even-number"></div>
           <div class="even-number"></div>
+          <div class="even-number"></div>
+          <div class="even-number"></div>
+          <div class="even-number"></div>
+          <div class="even-number"></div>
+          <div class="even-number"></div>
         </div>
         <div class="odd-numbers">
           <span id="odd-text"></span>
+          <div class="odd-number"></div>
+          <div class="odd-number"></div>
+          <div class="odd-number"></div>
+          <div class="odd-number"></div>
+          <div class="odd-number"></div>
           <div class="odd-number"></div>
           <div class="odd-number"></div>
           <div class="odd-number"></div>
